[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [
    "path-all",
    "shell-open",
    "fs-remove-dir",
    "fs-rename-file",
    "dialog-save",
    "dialog-ask",
    "fs-exists",
    "fs-create-dir",
    "dialog-open",
    "fs-remove-file",
    "fs-copy-file",
    "fs-read-dir",
    "fs-write-file",
    "fs-read-file",
    "dialog-confirm",
    "dialog-message",
] }
git2 = { varsion = "0.18.3", features = ["vendored-libgit2"] }
chrono = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip-extract = "0.1.3"
tempfile = "3.10.1"
anyhow = "1.0"
zifu_core = "0.1.1"
serde_yaml = "0.9.34"
toml = "0.8.13"
log = "0.4.21"


[target.x86_64-pc-windows-msvc.dependencies]
junction = "1.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
