[package]
name = "catalyzer"
version = "0.1.0"
description = "Catalyzer - A cross-platform and lightweight mod manager & launcher for Cataclysm: Dark Days Ahead."
authors = ["chitsii"]
license = ""
repository = "https://github.com/chitsii/catalyzer"
default-run = "catalyzer"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "shell-sidecar",
    "dialog-message",
    "global-shortcut-all",
    "dialog-open",
    "path-all",
    "shell-open",
    "dialog-ask",
    "fs-exists",
    "process-command-api",
] }
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
chrono = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip-extract = "0.1.3"
tempfile = "3.10.1"
anyhow = "1.0"
zifu_core = "0.1.1"
serde_yaml = "0.9.34"
toml = "0.8.13"
log = "0.4.21"

[target.x86_64-pc-windows-msvc.dependencies]
junction = "1.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
