[package]
name = "catalyzer"
version = "0.1.0"
description = "Catalyzer - A cross-platform and lightweight mod manager & launcher for Cataclysm: Dark Days Ahead."
authors = ["chitsii"]
license = ""
repository = "https://github.com/chitsii/catalyzer"
default-run = "catalyzer"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
git2 = { version = "0.18.3", features = ["vendored-libgit2"] }
chrono = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
zip-extract = "0.1.3"
tempfile = "3.10.1"
anyhow = "1.0"
zifu_core = "0.1.1"
serde_yaml = "0.9.34"
toml = "0.8.13"
log = "0.4.21"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-http = "2.0.0-beta.9"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-shell = "2.0.0-beta.7"
fs_extra = "1.3.0"
dirs = "5.0.1"
tauri-plugin-upload = "2.0.0-beta.7"
dmgwiz = { version = "0.2", default-features = false }
dmg = "0.1.2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = "1.38.0"

[target.x86_64-pc-windows-msvc.dependencies]
junction = "1.1.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.6"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
